# drf_rockstar_extensions

./: .flake8  .readthedocs.yml  README.md  README.rst  pyproject.toml
.github/workflows/: test.yml  upload-to-pip.yml
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/fields/: 001-fetcher-field.rst
drf_rockstar_extensions/: defaults.py  settings.py
drf_rockstar_extensions/fields/: __init__.py
drf_rockstar_extensions/fields/fetcher_field/: __init__.py  fetcher_field.py
drf_rockstar_extensions/fields/fetcher_field/extras/: auths.py  helpers.py
drf_rockstar_extensions/fields/fetcher_field/utils/: auths.py
tests/: test_settings.py
tests/fields/: test_fetcher_field.py
